# dnn-from-scratch

./: .gitignore  Cargo.toml  README.md
assets/rssi/: rssi-dataset.csv
dnn_from_scratch/: Cargo.toml
dnn_from_scratch/src/: activation.rs  classification.rs  fully_connected.rs  lib.rs  loss.rs  neural_network.rs  report.rs  utils.rs
dnn_from_scratch/src/dnn/: fully_connected.rs  mod.rs  neural_network.rs
dnn_from_scratch/src/utils/: report.rs
src/: dataset_handler.rs  fully_connected.rs  main.rs  neural_network.rs  report.rs
src/mnist_experiment/: dataset_setup.rs  mod.rs  plot.rs
src/rssi_experiment/: dataset_setup.rs  mod.rs  plot.rs
