[package]
name = "dnn-from-scratch"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.33.2"
rand = "0.8.5"
rand_distr = "0.4.3"
polars = { version = "0.44.2", features = ["polars-io", "ndarray"] }
ndarray = "0.16.1"
charming = { version = "0.4.0", features = ["ssr"]}

[dependencies.ndarray-npy]
version = "0.9.1"
default-features = false
features = []
